recursion.cons.ismember.IsMember.scala.error
Erreur de compilation :
IsMember:4: error: not found: value False
    return(False);
           ^IsMember:7: error: not found: value True
      return(True);
             ^IsMember:9: error: not enough arguments for method isMember: (l: List[Int], v: Int)Boolean.
Unspecified value parameter v.
      return(isMember(l.tail));
                     ^