recursion.cons.ismember.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
  if (l==Nil){
    return(False);
  }else{
    if (l.head==v){
      return(True);
    }else{
      return(isMember(l.tail));
    }
  }
}